--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:11.0.0'
     implementation 'org.firstinspires.ftc:Vision:11.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'dev.nextftc:control:1.0.0'
     implementation('com.acmerobotics.dashboard:dashboard:0.5.1')
     implementation "com.bylazar:fullpanels:1.0.2"
 }
